# linux-ums

./: .buildinfo  .gitignore  Makefile.am  README.md  aminclude.am  autogen.sh  benchmarks.html  configure.ac  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js  tools.html
.doctrees/: benchmarks.doctree  environment.pickle  index.doctree  install.doctree  overview.doctree  tools.doctree
.doctrees/kernelspace/: index.doctree  module.doctree  uapi.doctree
.doctrees/kernelspace/module/: complist.doctree  context.doctree  core.doctree  device.doctree  module_diagram.doctree  module_lifecycle.doctree  proc.doctree  scheduler.doctree  worker.doctree
.doctrees/kernelspace/uapi/: definitions.doctree  usage.doctree
.doctrees/userspace/: api.doctree  examples.doctree  index.doctree  internals.doctree  library.doctree  scheduler.doctree  scheduler_entry_point.doctree  scheduler_thread.doctree  thread_execution.doctree  worker.doctree
.doctrees/userspace/api/: definitions.doctree  functions.doctree  usage.doctree
.doctrees/userspace/examples/: simple_example.doctree
.doctrees/userspace/internals/: complist.doctree  library_lifecycle.doctree  scheduler.doctree  worker.doctree
.github/workflows/: main.yml
_sources/: benchmarks.rst.txt  index.rst.txt  install.rst.txt
_sources/kernelspace/module/: complist.rst.txt  context.rst.txt  core.rst.txt  module_diagram.rst.txt  proc.rst.txt  scheduler.rst.txt
_sources/kernelspace/uapi/: definitions.rst.txt
_sources/userspace/: scheduler.rst.txt  scheduler_thread.rst.txt  worker.rst.txt
_sources/userspace/internals/: complist.rst.txt  library_lifecycle.rst.txt  scheduler.rst.txt
benchmark/: Makefile.am  configure.ac
benchmark/lib/: Makefile.am
benchmark/lib/include/: Makefile.am
benchmark/lib/include/ums/benchmark/: pthread_suite.h  suite.h  task.h  timer.h  ums_suite.h
benchmark/lib/include/ums/benchmark/pthread/: suite.h
benchmark/lib/include/ums/benchmark/ums/: scheduler.h  suite.h  worker.h
benchmark/lib/src/: global.h  suite.c  suite.h  timer.c  timer.h
benchmark/lib/src/pthread/: suite.c  suite.h  worker.c  worker.h
benchmark/lib/src/ums/: scheduler.c  scheduler.h  suite.c  suite.h  worker.c
doc/: Dockerfile  Makefile.am  conf.py.in  install.rst  overview.rst  tools.rst
doc/_static/: theme_overrides.css
doc/kernelspace/: index.rst  module.rst  uapi.rst
doc/kernelspace/module/: complist.rst  context.rst  device.rst  module_lifecycle.rst  proc.rst  scheduler.rst  worker.rst
doc/kernelspace/uapi/: usage.rst
doc/userspace/: api.rst  examples.rst  index.rst  internals.rst  library.rst  scheduler_entry_point.rst  thread_execution.rst
doc/userspace/api/: definitions.rst  functions.rst  usage.rst
doc/userspace/examples/: simple_example.rst
doc/userspace/internals/: library_lifecycle.rst  scheduler.rst  worker.rst
dockerfiles/buildroot/: Dockerfile
examples/: Makefile.am  configure.ac
examples/00-simple-example/: Makefile.am  global.h  main.c
examples/util/: list.h
kernelspace/: index.html  module.html  uapi.html
kernelspace/module/: complist.html  context.html  core.html  device.html  module_diagram.html  module_lifecycle.html  proc.html  scheduler.html  worker.html
kernelspace/uapi/: definitions.html  usage.html
m4/: ac_docs_enable.m4  ac_doxygen.m4  ac_latex.m4  ac_sphinx.m4
qemu/configs/: kernel_config_fragment  qemu_x86_64_defconfig
rootfs_overlay/etc/: inittab
scripts/linux/: benchmark.py  build.sh  build_docs.sh  example.sh  install.sh  install_deps.sh  release.sh  test.sh
scripts/qemu/: build.sh  example.sh  install.sh  install_deps.sh  qemu-bridge.sh  setup-sdk.sh  test.sh
src/lib/: Doxyfile.in  Makefile.am  configure.ac  libums.pc.in
src/lib/include/: Makefile.am  ums.h  umsdefs.h
src/lib/src/: complist.c  context.c  hooks.c  private.h  scheduler.c  worker.c
src/lib/tests/: check_ums.h  check_ums_completion_list.c  check_ums_scheduler.c  check_ums_worker.c  mock_ums_syscalls.c
src/module/: Doxyfile.in  Makefile.am  configure.ac
src/module/src/: Makefile  complist.c  complist.h  context.c  context.h  device.c  device.h  enter_ums.c  idr_l.h  log.h  scheduler.c  scheduler.h  ums.c  ums.h  ums_mod.c  worker.c  worker.h
src/module/src/proc/: base.c  base.h  context.c  context.h  scheduler.c  scheduler.h  worker.c  worker.h
src/module/src/uapi/: Makefile.am  ums_ioctl.h
src/module/src/uapi/ums/: ums_ioctl.h
src/util/: Makefile.am  list.h
userspace/: api.html  examples.html  index.html  internals.html  library.html  scheduler.html  scheduler_entry_point.html  scheduler_thread.html  thread_execution.html  worker.html
userspace/api/: definitions.html  functions.html  usage.html
userspace/examples/: simple_example.html
userspace/internals/: complist.html  library_lifecycle.html  scheduler.html  worker.html
